index.html edited online with Bitbucket

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -18,7 +19,7 @@
   <li id="f8"><a href="#"><img src="/gfx/hu.png" alt="Magyar" /></a></li>
   <li id="f9"><a href="#"><img src="/gfx/es.png" alt="Español" /></a></li>
  </ul>
-</div><!--end #topBan-->
+</div><!--#topBan-->
 <div id="nav">
  <ul>
   <li><a href="#">Насловна</a></li>
@@ -28,13 +29,77 @@
   <li><a href="#">Контакт</a></li>
   <li><a href="#">Линкови</a></li>
  </ul>
-</div><!--end #nav-->
+</div><!--#nav-->
 <div id="home">
  <blockquote cite="В. Богишић">
   <p>„Што двојица углаве, трећега не веже“
   </p>
  </blockquote>
  <div id="cite">В. Богишић</div>
-</div><!--end #home-->
+ <p class="hand">Добродошли на сајт адвокатске канцеларије адвоката Оливере Јованић</p>
+ <div id="featured">
+  <div id="gdeSmo">
+   <h2>Где се налазимо?</h2>
+   <a target="_blank" href="http://maps.google.com/maps/ms?ssp=addf&num=10&ie=UTF8&hl=sr&source=embed&msa=0&msid=115294938786382809721.00048baf2da135c0ff369&ll=46.095529,19.679051&spn=0.001525,0.003449&z=18"><img src="/gfx/mapa.png" /></a>
+   <p>Налазимо се у Суботици,
+    <br />на северу Србије.
+    <br />Наша адреса је
+    <br />ул. Ђуре Јакшића бр. 3,
+    <br />24000 Суботица
+   </p>
+   <a target="_blank" href="http://maps.google.com/maps/ms?ssp=addf&num=10&ie=UTF8&hl=sr&source=embed&msa=0&msid=115294938786382809721.00048baf2da135c0ff369&ll=46.095529,19.679051&spn=0.001525,0.003449&z=18" class="more">Нађите нас на мапи</a>
+  </div><!--#gdeSmo-->
+  <div id="oGradu">
+   <h2>О Суботици</h2>
+   <a target="_blank" href="http://www.subotica.rs"><img src="/gfx/su-logo.png" alt="Грб града" />Званична презентација града</a>
+   <a target="_blank" href="http://sr.wikipedia.org/sr/Суботица"><img src="/gfx/wikipedia-logo.png" alt="Википедија - Слободна енциклопедија" />Чланак на Википедији</a>
+  </div><!--#oGradu-->
+  <div id="radnoVreme">
+   <h2>Радно време</h2>
+   <h3>Пријем странака</h3>
+   <table>
+    <tr>
+     <td>Уторак</td>
+     <td>13:30 - 14:30</td>
+    </tr>
+     <td>Четвртак</td>
+     <td>13:30 - 14:30</td>
+    </tr>
+   </table>
+   <h3>Заказивање клијентима</h3>
+   <p>По договору</p>
+  </div><!--#radnoVreme-->
+ </div><!--#featured-->
+</div><!--#home-->
+<div id="footer">
+ <div id="footwrap">
+  <div>
+   <h2>Актуелно</h2>
+    <h3>Једна вест..</h3>
+    <h3>Друга вест..</h3>
+  </div>
+  <div id="foot2">
+   <h2>Одабране одлуке</h2>
+   <blockquote cite="Врховни касациони суд">
+    <p>„Право на накнаду нематеријале штете не застарева све док последице не буду отклоњене, односно лечење не буде завршено“</p>
+   </blockquote>
+   <div id="cite">Врховни касациони суд</div>
+  </div><!--#foot2-->
+  <div id="foot3">
+   <h2>Контакт</h2>
+   <label>Ваше име: <input type="text" /></label>
+   <label>Е-пошта: <input type="text" /></label>
+   <label>Порука: 
+    <textarea></textarea>
+   </label>
+  </div><!--#foot3-->
+  <div>
+   <h2>Адвокат</h2>
+    <p>Адвокат Оливера Јованић је рођена у Београду, али живи и ради у Суботици.
+    <br />Правни факултет је дипломирала 1996. у Новом Саду.
+    </p>
+  </div>
+ </div><!--#footwrap-->
+</div><!--#footer-->
 </body>
 </html>
